--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+.ui-header {
+  height: 60px;
+}
 
 
 
