--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -2,18 +2,23 @@
  * Tour/Sign In page
  * -------------------------*/
 #tour {
-  height: 100%;
+    height: 100%;
 }
-#tour .marketing {
-  background: #aaf;
-  width: 70%;
-  float: left;
+#tour > .ui-grid-a {
+    height: 100%;
+}
+#tour .introTour {
+    background: #eee;
+    box-sizing: border-box;
+    box-sizing: border-box;
+    width: 70%;
+    height: 100%;
 }
 #tour .signIn {
-  background: #333;
-  color: #eee;
-  width: 30%;
-  float: left;
+    background: #333;
+    color: #eee;
+    width: 30%;
+    height: 100%;
 }
 
 
@@ -21,5 +26,5 @@
  * Start Tasks page
  * -------------------------*/
 #startTasks {
-  
+
 }
