--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -28,10 +28,17 @@
 #startTasks {
     position: relative;
 }
+#startTasks .tasksPayGoals {
+    height: 100%;
+    background: #eee;
+}
 #startTasks .cover {
     position: absolute;
-    left: 33%;
+    height: 91%;
+    height: calc(100% - 62px);
+    right: 0;
     width: 66%;
-    background: rgba(246,246,246,.9);
+    width: calc(100% / 3 * 2);
+    background: rgba(3,246,246,.9);
     z-index: 100;
 }
