--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -42,3 +42,16 @@
     background: rgba(3,246,246,.9);
     z-index: 100;
 }
+#startTasks .cover:before {
+    content: "";
+    width: 1px;
+    height: 1px;
+    background: transparent;
+    border-left: 1px solid transparent;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-right: 20px solid rgba(3,246,246,.9);
+    position: absolute;
+    left: -21px;
+    top: 40px;
+}
