--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -9,7 +9,7 @@
 }
 #tour .introTour {
     background: #eee;
-    box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 70%;
     height: 100%;
@@ -55,9 +55,9 @@
     width: 50%;
     background: #fff;
     z-index: 100;
-    -moz-box-shadow: 0 0 35px 0 rgba(0,0,0,.5);
     box-shadow: 0 0 35px 0 rgba(0,0,0,.5);
     border: 1px solid #777;
+    border-radius: 20px;
 }
 #startTasks .cover:before,
 #startTasks .cover:after {
@@ -88,7 +88,7 @@
     font-weight: bold;
 }
 #startTasks .taskCatalog > .title {
-    padding: 0 15px;
+    padding: 0 20px;
     background: #777;
     color: #fff;
     margin-top: 15px;
@@ -96,7 +96,7 @@
 #startTasks .taskCatalog .taskItem {
 border-bottom: 1px solid #ccc;
 border-top: 1px solid #aaa;
-padding: 10px 15px;
+padding: 10px 20px;
 }
 #startTasks .taskCatalog .taskItem .title {
 }
