made an HTML template out of taskItems, instead of having the HTML in the JS.  Also started creating hover states, which will show up as tap indicators in mobile, and added something that almost looks like a button to ADD each task

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -93,12 +93,24 @@
     color: #fff;
     margin-top: 15px;
 }
+#startTasks .taskCatalog .taskTemplate {
+    display: none;
+}
 #startTasks .taskCatalog .taskItem {
 border-bottom: 1px solid #ccc;
 border-top: 1px solid #aaa;
 padding: 10px 20px;
 }
-#startTasks .taskCatalog .taskItem .title {
+#startTasks .taskCatalog .taskItem:hover {
+    background: #ddd;
+}
+#startTasks .taskCatalog .taskItem .addButton {
+    width: 50px;
+    margin-right: 10px;
+    float: left;
+}
+#startTasks .taskCatalog .taskItem .taskDetails {
+    float: left;
 }
 #startTasks .taskCatalog .taskItem .numKids {
     font-color: #777;
