--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,15 @@ textarea {
 .ui-content {
     padding: 20px;
 }
-
+#startTasks .ui-footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    z-index: 1000;
+    opacity: .9;
+}
 
 
 
