--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -118,6 +118,10 @@ padding: 10px 20px;
 #configureTasks {
     background: #fff;
 }
+#configureTasks .taskTitle {
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+}
 #configureTasks .hideNonRepeat{
     display:none;
 }
