--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -37,14 +37,17 @@
     line-height: 1.7em;
     font-weight: bold;
 }
-#addTasksForm .ui-btn-shadow.ui-body-a {
+#addTasksForm .ui-btn-shadow.ui-body-a,
+#addGoalsForm .ui-btn-shadow.ui-body-a {
     margin: .8em 0;
 }
-#addTasksForm .ui-block-a {
+#addTasksForm .ui-block-a,
+#addGoalsForm .ui-block-a {
     width: 65%;
     margin-right: 1%;
 }
-#addTasksForm .ui-block-b {
+#addTasksForm .ui-block-b,
+#addGoalsForm .ui-block-b {
     width: 34%;
 }
 #startTasks .cover {
@@ -109,7 +112,8 @@
 }
 
 #startTasks .taskCatalog .title,
-#startTasks .addTaskContent .title {
+#startTasks .addTaskContent .title,
+#startTasks .addGoalContent .title {
     font-size: 1.6em;
     line-height: 1.7em;
     font-weight: bold;
@@ -152,4 +156,8 @@ padding: 10px 20px;
 }
 #configureTasks .hideNonRepeat{
     display:none;
+}
+
+#startTasks .addGoalContent {
+    display: none;
 }
