prettied up the controls in the configure task popup

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -157,6 +157,10 @@ padding: 10px 20px;
 #configureTasks .hideNonRepeat{
     display:none;
 }
+#configureTasks .taskRepeatPaymentDetails .resp,
+#configureTasks .taskNonRepeatPaymentDetails .resp {
+    display: none;
+}
 
 #startTasks .addGoalContent {
     display: none;
