--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -165,3 +165,6 @@ padding: 10px 20px;
 #startTasks .addGoalContent {
     display: none;
 }
+#startTasks .startGoalsFooter {
+    display: none;
+}
