vertically centering images in productDetails

--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,13 @@ textarea {
 .ui-popup-screen {
     background: #ccc;
 }
-
+.verticalWrapper {
+    display: table;
+}
+.verticalMiddle {
+    display: table-cell;
+    vertical-align: middle;
+}
 
 
 
