--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -66,7 +66,7 @@
     20% {
         -webkit-transform: translateX(5%);
     }
-    70%, 100% {
+    100% {
         -webkit-transform: translateX(-100%);
     }
     80% {
