--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -158,6 +158,9 @@ padding: 10px 20px;
 #configureTasks {
     background: #fff;
 }
+#configureTasks .taskContent.ui-content {
+    min-width: 416px;
+}
 #configureTasks .taskTitle {
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
