--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -116,6 +116,11 @@
     right: -22px;
 }
 
+#startTasks .taskCatalog .tasks {
+    height:360px;
+    overflow:scroll;
+}
+
 #startTasks .taskCatalog .title,
 #startTasks .addTaskContent .title,
 #startTasks .addGoalContent .title {
