creating error classes for forms and showing as needed for $0 money tasks and no-days-selected repeating tasks

--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,11 @@ textarea {
     display: table-cell;
     vertical-align: middle;
 }
-
+.error {
+    margin-top: 5px;
+    color: #a00;
+    display: none;
+}
 
 
 
