--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -182,7 +182,22 @@ padding: 10px 20px;
 }
 #startTasks .taskCatalog .taskItem .addButton {
     width: 50px;
-    margin-right: 10px;
+    height: 50px;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    line-height: 45px;
+    font-size: 2em;
+    font-weight: bold;
+    border: 1px solid #c1b8b3;
+    background: #77e1f9;
+    background-image: -webkit-gradient(linear,left top,left bottom,from( #77e1f9 ),to( #009bce ));
+    background-image: -webkit-linear-gradient( #77e1f9,#009bce );
+    background-image: -moz-linear-gradient( #77e1f9,#009bce );
+    background-image: -ms-linear-gradient( #77e1f9,#009bce );
+    background-image: -o-linear-gradient( #77e1f9,#009bce );
+    background-image: linear-gradient( #77e1f9,#009bce );    text-shadow: 0 1px 2px #2f3e46;
+    margin-right: 15px;
     float: left;
 }
 #startTasks .taskCatalog .taskItem .taskDetails,
