--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -36,8 +36,28 @@
 }
 #startTasks .tasksPayGoals {
     height: 100%;
+    position: relative;
+    left: 50%;
     background: #eee;
 }
+@-webkit-keyframes slideLeft {
+    20% {
+        -webkit-transform: translateX(5%);
+    }
+    100% {
+        -webkit-transform: translateX(-50%);
+    }
+    80% {
+        -webkit-transform: translateX(-55%);
+    }
+    90% {
+        -webkit-transform: translateX(-47%);
+    }
+}
+#startTasks .tasksPayGoals.left {
+    -webkit-animation: slideLeft .7s ease-in-out forwards;
+}
+
 #startTasks .tasksPayGoals .header {
     border-bottom: 3px solid #aaa;
 }
@@ -86,8 +106,10 @@
 #startTasks .cover {
     position: absolute;
     height: 91%;
-    height: calc(100% - 62px);
-    left: 50%;
+    height: calc(100% - 63px);
+/*    left: 50%;*/
+    left: 0;
+    top: 63px;
     width: 50%;
     background: #fff;
     z-index: 100;
@@ -95,42 +117,33 @@
     border: 1px solid #777;
 /*    border-radius: 20px;*/
 }
-@-webkit-keyframes slideLeft {
-    20% {
-        -webkit-transform: translateX(5%);
-    }
-    100% {
-        -webkit-transform: translateX(-100%);
-    }
-    80% {
-        -webkit-transform: translateX(-105%);
-    }
-    90% {
-        -webkit-transform: translateX(-97%);
-    }
-}
-#startTasks .cover.leftCover {
-    -webkit-animation: slideLeft .7s ease-in-out forwards;
-}
 #startTasks .cover:before,
 #startTasks .cover:after {
     content: "";
     width: 1px;
     height: 1px;
     background: transparent;
-    border-left: 1px solid transparent;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-right: 20px solid white;
     position: absolute;
-    left: -21px;
-    top: 40px;
     z-index: 100;
+    top: 18px;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    
+/*    border-left: 1px solid transparent;
+    border-right: 20px solid white;
+    left: -21px;
+*/
+    right: -16px;
+    border-left: 15px solid #fff;
+    border-right: 1px solid transparent;
 }
 #startTasks .cover:after {
-    border-right-color: #666;
-    z-index: 99;
+/*    border-right-color: #666;
     left: -22px;
+*/
+    z-index: 99;
+    border-left-color: #666;
+    right: -17px;
 }
 #startTasks .cover.leftCover:before,
 #startTasks .cover.leftCover:after {
