--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -180,6 +180,7 @@
     overflow: auto;
 }
 #startTasks .taskCatalog .title,
+#startTasks .taskCatalog .altTitle,
 #startTasks .addTaskContent .title,
 #startTasks .selectedTasks .title,
 #startTasks .addGoalContent .title {
@@ -187,6 +188,7 @@
     font-weight: bold;
 }
 #startTasks .taskCatalog > .title,
+#startTasks .taskCatalog > .altTitle,
 #startTasks .productCatalog > .title {
     padding: 0 20px;
     background: #777;
@@ -194,6 +196,9 @@
     margin-top: 15px;
     text-shadow: 0 1px 0 #333;
 }
+
+#startTasks .taskCatalog .altTitle {display:none;}
+
 #startTasks .taskCatalog .taskSearchTerm {
     font-weight: bold;
     font-style: italic;
