attempt at improving scrolling in ios

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -178,6 +178,7 @@
 #startTasks .taskCatalog .tasks {
     height: 483px;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 #startTasks .taskCatalog .title,
 #startTasks .taskCatalog .altTitle,
