1. configure a custom task button is disabled until you start typing;  2. cleared the custom task text field when adding a fully configured one;  3. fully reseting the configure task form every time it opens

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -115,6 +115,7 @@
 #addTasksForm .ui-block-b,
 #addGoalForm .ui-block-b {
     width: 34%;
+    margin-top: -4px;
 }
 #startTasks .cover {
     position: absolute;
