first hit on filtering product list

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -174,7 +174,8 @@
     right: -22px;
 }
 
-#startTasks .taskCatalog .tasks {
+#startTasks .taskCatalog .tasks,
+#startTasks .productCatalog .products{
     height: 483px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
