fixed side scrolling main page

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -33,6 +33,8 @@
  * -------------------------*/
 #startTasks {
     position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 #startTasks .tasksPayGoals {
     height: 100%;
