--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -182,6 +182,10 @@
     overflow: auto;
     -webkit-overflow-scrolling: touch;
 }
+#startTasks .taskCatalog .tasks .taskItem:last-child,
+#startTasks .productCatalog .products .productItem:last-child {
+    margin-bottom: 63px;
+}
 #startTasks .taskCatalog .title,
 #startTasks .taskCatalog .altTitle,
 #startTasks .addTaskContent .title,
@@ -266,6 +270,7 @@ padding: 10px 20px;
 #configureTasks .taskTitle {
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
+    font-size: 1.6em;
 }
 #configureTasks .hideNonRepeat {
     display:none;
