--- a/css/jqmOverrides.css
+++ b/css/jqmOverrides.css
@@ -43,12 +43,12 @@
 }
 
 .ui-bar-a {
-    background-image: url(../img/texture.png), -webkit-gradient(linear,left top,left bottom,from( #3691ae ),to( #59bbd8 ));
-    background-image: url(../img/texture.png), -webkit-linear-gradient( #3691ae,#59bbd8 );
-    background-image: url(../img/texture.png), -moz-linear-gradient( #3691ae,#59bbd8 );
-    background-image: url(../img/texture.png), -ms-linear-gradient( #3691ae,#59bbd8 );
-    background-image: url(../img/texture.png), -o-linear-gradient( #3691ae,#59bbd8 );
-    background-image: url(../img/texture.png), linear-gradient( #3691ae,#59bbd8 ) url(/img/texture.png);
+    background-image: url(../img/texture@2x.png), -webkit-gradient(linear,left top,left bottom,from( #3691ae ),to( #59bbd8 ));
+    background-image: url(../img/texture@2x.png), -webkit-linear-gradient( #3691ae,#59bbd8 );
+    background-image: url(../img/texture@2x.png), -moz-linear-gradient( #3691ae,#59bbd8 );
+    background-image: url(../img/texture@2x.png), -ms-linear-gradient( #3691ae,#59bbd8 );
+    background-image: url(../img/texture@2x.png), -o-linear-gradient( #3691ae,#59bbd8 );
+    background-image: url(../img/texture@2x.png), linear-gradient( #3691ae,#59bbd8 ) url(/img/texture.png);
 }
 
 /* RETINA IMAGES */
