--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -364,3 +364,28 @@ padding: 10px 20px;
 #startTasks .productCatalog .productItem .productDetails {
     width: 63%;
 }
+
+/* Product details popup */
+#productDetailsPopup {
+    background: #fff;
+}
+#productDetailsPopup .images {
+    float: left;
+    margin-right: 20px;
+}
+#productDetailsPopup .mainImage {
+    width: 300px;
+    height: 300px;
+    text-align: center;
+}
+#productDetailsPopup .mainImage img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
+#productDetailsPopup .details {
+    float: left;
+}
+#productDetailsPopup .bottom {
+    background: #e9e9e9;
+}
