--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -374,7 +374,7 @@ padding: 10px 20px;
     float: left;
     margin-right: 20px;
 }
-#productDetailsPopup .mainImage {
+#productDetailsPopup .mainImage .verticalMiddle {
     width: 300px;
     height: 300px;
     text-align: center;
@@ -389,6 +389,42 @@ padding: 10px 20px;
 }
 #productDetailsPopup .details p {
     margin: .5em 0;
+}
+#productDetailsPopup .altImages.populated {
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px dashed #ccc;
+}
+#productDetailsPopup .altWrapper {
+    margin-right: 25px;
+    border: 1px solid #ccc;
+    margin-top: 2px;
+    float: left;
+}
+#productDetailsPopup .altWrapper .verticalMiddle {
+    width: 80px;
+    height: 80px;
+}
+#productDetailsPopup .fourAcross .altWrapper {
+    margin-right: 9px;
+}
+#productDetailsPopup .fourAcross .altWrapper .verticalMiddle {
+    width: 65px;
+    height: 65px;
+}
+#productDetailsPopup .altWrapper.selected {
+    margin-top: 0;
+    border: 3px solid #777;
+}
+#productDetailsPopup .altWrapper:last-child {
+    margin-right: 0;
+}
+#productDetailsPopup .altWrapper .verticalMiddle {
+    text-align: center;
+}
+#productDetailsPopup .altImages img {
+    max-width: 100%;
+    max-height: 100%;
 }
 #productDetailsPopup .bottom {
     background: #e9e9e9;
