--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -426,12 +426,30 @@ padding: 10px 20px;
     max-width: 100%;
     max-height: 100%;
 }
+#productDetailsPopup .moneyTime {
+    margin-bottom: 20px;
+}
 #productDetailsPopup .timeToEarn {
     color: #f93d22;
-    padding-left: 20px;
+    padding-left: 10px;
+    display: inline-block;
+    position: relative;
 }
 #productDetailsPopup .timeToEarn .time {
     border-bottom: 1px dotted #f93d22;
+}
+#productDetailsPopup .timeToEarnTooltip {
+    display: block;
+    z-index: 10;
+    position: absolute;
+    left: 20px;
+    top: -5px;
+    width: 200px;
+    padding: 10px;
+    border: 1px solid #f93d22;
+    background: #f9f9f9;
+    color: #333;
+    font-style: italic;
 }
 #productDetailsPopup .bottom {
     background: #e9e9e9;
