Changes to js to swap popular products & whole catalog

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -193,8 +193,13 @@
     right: -22px;
 }
 
-#startTasks .taskCatalog .tasks,
 #startTasks .productCatalog .products{
+    display:none;
+}
+
+#startTasks .taskCatalog .tasks,
+#startTasks .productCatalog .products,
+#startTasks .productCatalog .popularProducts{
     height: 483px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
