Fixed products no results

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -197,6 +197,10 @@
     display:none;
 }
 
+#startTasks .productCatalog .productsNoResults{
+    display:none;
+}
+
 #startTasks .taskCatalog .tasks,
 #startTasks .productCatalog .products,
 #startTasks .productCatalog .popularProducts{
