better fog screen

--- a/css/jqmOverrides.css
+++ b/css/jqmOverrides.css
@@ -36,7 +36,7 @@
     height: 65px;
 }
 .ui-popup-screen {
-    background: #ccc;
+    background-color: #000;
 }
 .ui-slider-track .ui-btn.ui-slider-handle {
     border-radius: 50%;
