--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -196,11 +196,13 @@
     right: -22px;
 }
 
-#startTasks .productCatalog .products{
+#startTasks .productCatalog .products,
+#startTasks .taskCatalog .tasks{
     display:none;
 }
 
-#startTasks .productCatalog .productsNoResults{
+#startTasks .productCatalog .productsNoResults,
+#startTasks .taskCatalog .tasksNoResults{
     display:none;
 }
 
